<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.thanhlongcorp.MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:id="@+id/imageView"
        android:src="@drawable/thanhlong" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:padding="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/product_header_text"
            android:textSize="24sp"
            android:id="@+id/product_textview"
            android:textStyle="bold"
            android:textColor="#f44336" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="14sp"
            android:text="@string/product_detail_text_1"
            android:id="@+id/product_detail_textview_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="14sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/product_detail_text_2"
            android:id="@+id/product_detail_textview_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="14sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/product_detail_text_3"
            android:id="@+id/product_detail_textview_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/contact_text"
        android:textSize="24sp"
        android:id="@+id/contact_textview"
        android:textStyle="bold"
        android:textColor="#f44336" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="14sp"
        android:text="@string/contact_detail_text_1"
        android:id="@+id/contact_detail_textview_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="14sp"
        android:autoLink="phone"
        android:text="@string/contact_detail_text_2"
        android:id="@+id/contact_detail_textview_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="14sp"
        android:text="@string/contact_detail_text_3"
        android:id="@+id/contact_detail_textview_3" />

    </LinearLayout>

</LinearLayout>
